Rota Abstrata,CORS, Resource

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -29,6 +29,8 @@
     <script src="lib/query-string/query-string.js"></script>
     <script src="lib/angular-oauth2/dist/angular-oauth2.min.js"></script>
     <!--  Ao instalar o Oauth2, se der erro, bower install angular-cookies#1.5.3 --save -->
+    <script src="lib/angular-resource/angular-resource.min.js"></script>
+    <!--  Ao instalar o angular-resource, se der erro, bower install angular-resource#1.5.3 --save -->
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -36,6 +38,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
+    <script src="js/controllers/client/clientCheckoutCtrl.js"></script>
+    <script src="js/controllers/client/clientCheckoutDetailCtrl.js"></script>
+    <script src="js/controllers/client/clientViewProductCtrl.js"></script>
+    <script src="js/service/productService.js"></script>
   </head>
   <body ng-app="starter">
   
