--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -44,6 +44,7 @@
 
     <script src="js/service/productService.js"></script>
     <script src="js/service/localStorage.js"></script>
+    <script src="js/service/cart.js"></script>
   </head>
   <body ng-app="starter">
   
