Exclusao Pedido, Alterar qtd pedido, Detalhes Pedido, Salvar Pedido

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -45,6 +45,7 @@
     <script src="js/service/productService.js"></script>
     <script src="js/service/localStorage.js"></script>
     <script src="js/service/cart.js"></script>
+    <script src="js/service/orderService.js"></script>
   </head>
   <body ng-app="starter">
   
