Pedido Criado, Pagina de Sucesso, Iniciando com Cupons

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -41,6 +41,7 @@
     <script src="js/controllers/client/clientCheckoutCtrl.js"></script>
     <script src="js/controllers/client/clientCheckoutDetailCtrl.js"></script>
     <script src="js/controllers/client/clientViewProductCtrl.js"></script>
+    <script src="js/controllers/client/clientCheckoutSuccessfulCtrl.js"></script>
 
     <script src="js/service/productService.js"></script>
     <script src="js/service/localStorage.js"></script>
