--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -47,6 +47,7 @@
     <script src="js/service/localStorage.js"></script>
     <script src="js/service/cart.js"></script>
     <script src="js/service/orderService.js"></script>
+    <script src="js/service/cupomService.js"></script>
   </head>
   <body ng-app="starter">
   
