QR Code, ngCordova, Emulate

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -32,6 +32,7 @@
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <!--  Ao instalar o angular-resource, se der erro, bower install angular-resource#1.5.3 --save -->
 
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
