--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -49,10 +49,11 @@
     <script src="js/service/cart.js"></script>
     <script src="js/service/orderService.js"></script>
     <script src="js/service/cupomService.js"></script>
+    <script src="js/service/userService.js"></script>
   </head>
   <body ng-app="starter">
-  
-  <ion-nav-bar class="bar bar-positive"></ion-nav-bar>
+  <!-- 
+  <ion-nav-bar class="bar bar-positive"></ion-nav-bar> -->
     <ion-nav-view></ion-nav-view>
     
   </body>
