Menu completo, Pedidos, OrderAPIService

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -43,6 +43,8 @@
     <script src="js/controllers/client/clientCheckoutDetailCtrl.js"></script>
     <script src="js/controllers/client/clientViewProductCtrl.js"></script>
     <script src="js/controllers/client/clientCheckoutSuccessfulCtrl.js"></script>
+    <script src="js/controllers/client/clientMenuCtrl.js"></script>
+    <script src="js/controllers/client/clientOrderCtrl.js"></script>
 
     <script src="js/service/productService.js"></script>
     <script src="js/service/localStorage.js"></script>
@@ -52,9 +54,6 @@
     <script src="js/service/userService.js"></script>
   </head>
   <body ng-app="starter">
-  <!-- 
-  <ion-nav-bar class="bar bar-positive"></ion-nav-bar> -->
     <ion-nav-view></ion-nav-view>
-    
   </body>
 </html>
