$filter join, Ordenendo pedidos, ion-refresh

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -52,6 +52,8 @@
     <script src="js/service/orderService.js"></script>
     <script src="js/service/cupomService.js"></script>
     <script src="js/service/userService.js"></script>
+
+    <script src="js/filters/join.js"></script>
   </head>
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
