Finalizado a area do client

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -45,6 +45,7 @@
     <script src="js/controllers/client/clientCheckoutSuccessfulCtrl.js"></script>
     <script src="js/controllers/client/clientMenuCtrl.js"></script>
     <script src="js/controllers/client/clientOrderCtrl.js"></script>
+    <script src="js/controllers/client/clientViewOrderCtrl.js"></script>
 
     <script src="js/service/productService.js"></script>
     <script src="js/service/localStorage.js"></script>
