--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -53,6 +53,7 @@
     <script src="js/service/orderService.js"></script>
     <script src="js/service/cupomService.js"></script>
     <script src="js/service/userService.js"></script>
+    <script src="js/service/userDataService.js"></script>
 
     <script src="js/filters/join.js"></script>
   </head>
