Updat-status Order, Generate rash, Pusher (geoLocation)

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -46,6 +46,9 @@
     <script src="js/controllers/client/clientMenuCtrl.js"></script>
     <script src="js/controllers/client/clientOrderCtrl.js"></script>
     <script src="js/controllers/client/clientViewOrderCtrl.js"></script>
+    <script src="js/controllers/deliveryman/deliverymanMenuCtrl.js"></script>
+    <script src="js/controllers/deliveryman/deliverymanOrderCtrl.js"></script>
+    <script src="js/controllers/deliveryman/deliverymanViewOrderCtrl.js"></script>
 
     <script src="js/service/productService.js"></script>
     <script src="js/service/localStorage.js"></script>
